# 2022CGFinalProject

./: CMakeLists.txt  readme.md
projects/2022CGFinalProject/: CMakeLists.txt  animation.cpp  animation.h  main.cpp  texture_mapping.cpp  texture_mapping.h
projects/base/: ball.cpp  ball.h  bezier_face.cpp  bezier_face.h  camera.cpp  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  ground.cpp  ground.h  model.cpp  objloader.cpp  objloader.h  objmodel.cpp  objmodel.h  prism.cpp  prism.h  prismatictable.cpp  prismatictable.h  shading.cpp  shading.h  skybox.cpp  tetrahedron.cpp  tetrahedron.h  texture.cpp  texture.h
